--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">汇保险</string>
+    <string name="app_name">信趣贷</string>
     <string name="action_settings">Settings</string>
     <string name="home">首页</string>
     <string name="agreement1">&#160;&#160;同意并授权</string>
