--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="zpmh">照片模糊</string>
     <string name="sgql">闪光强烈</string>
     <string name="jdqx">角度倾斜</string>
-
+    <string name="update_version">新版本升级</string>
     <string name="face_sorry">抱歉,人脸认证失败,请重新认证</string>
     <string name="face_loading">正在获取认证结果请耐心等待...</string>
     <string name="face_sorry1">抱歉,人脸认证获取失败,请重新获取</string>
@@ -78,6 +78,8 @@
 
 
 
+    <string name="no_escalation">暂不升级</string>
+    <string name="lj_escalation">立即升级</string>
 
 
     <!-- behavior -->
