--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@
     <string name="app_nam">连连支付SDK</string>
     <string name="app_name_stand">连连四要素SDK</string>
     <string name="sdk_introduction">SDK支持两种接入方式（标准版和卡前置），请按menu键进行选择所需要的支付方式，默认方式是标准版接入</string>
+    <string name="loan_stage">借款进度</string>
 
 </resources>
